--- a/result/김재명.html
+++ b/result/김재명.html
@@ -12,9 +12,9 @@
 	<meta name="twitter:title" content="챔필 이상형 테스트">
 	<meta name="twitter:creator" content="@on_tuna_e">
 
-	<!-- 여기 -->
-	<!-- 여기 -->
-	<!-- 여기 -->
+	<!-- 여기: 트위터 미리보기용 사진 -->
+	<!-- 여기: 어떻게 뜰지 정하는 곳입니다 -->
+	<!-- 여기: Twitter Card Validator에 돌려야 제대로 뜹니다 -->
 	<meta name="twitter:image" content="https://movie-phinf.pstatic.net/20161108_29/1478580028819WtcyH_JPEG/movie_image.jpg">
 
 	<title>챔필 이상형 테스트</title>
@@ -25,10 +25,6 @@
 <body id="re-body">
 	<div class="box">
 		<div class="result">
-
-			<!-- 여기 -->
-			<!-- 여기 -->
-			<!-- 여기 -->
 			<h6>나랑 찰떡궁합 챔필은</h6>
 			<h1>구체적으로 듬직한 형사, 김재명!</h1>
 			<div class="image"><img src="https://movie-phinf.pstatic.net/20161108_29/1478580028819WtcyH_JPEG/movie_image.jpg" alt=""></div>
@@ -39,10 +35,7 @@
 		<div class="restart">
 			<a href="http://chamtuna.dothome.co.kr" class="myButton">다시하기</a>
 		</div>
-
-		<!-- 여기 -->
-		<!-- 여기 -->
-		<!-- 여기 -->
+		
 		<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="🌊 챔필 이상형 테스트! 1가정 1챔필 보급 𝐫𝐞𝐚𝐥𝐥𝐲 요망 ㅠ.ㅠ" data-url="http://chamtuna.dothome.co.kr/result/%EA%B9%80%EC%9E%AC%EB%AA%85.html" data-hashtags="챔필,이상형테스트,김재명,이원_테스트" data-related="" data-lang="ko" data-show-count="false">공유하기</a>
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</footer>
