--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 				var clicked = $(this).attr('value');
 				result = result + clicked;
 
-				// 여기! qn = 7을
-				// 여기! qn = 총 질문 개수로
-				// 여기! !
-				if (qn != 7) {
+				// 여기! qn = 11을
+				// 여기! qn = 총 질문 개수로 바꿔주세요
+				// 여기! 이상형테스트 스포일러 방지를 위해 3개 질문 외 다른 것들은 지운 파일입니다. 삭제 전 원래는 11문항 모두 있었습니다! 숫자가 다르지만 걱정하지 마세용
+				if (qn != 11) {
 					$('#q' + qn).css('display', 'none');
 					qn = qn + 1;
 					$('#q' + qn).css('display', 'block');
@@ -92,44 +92,6 @@
 						<div class="answer" value="ac">핫 커피를 주문한다</div>
 						<div class="answer" value="gijl">베이커리류를 주문한다</div>
 						<div class="answer" value="de">대세는 스무디랑 요거트지!</div>
-					</div>
-				</li>
-
-				<li id="q3">
-					<div class="content">
-						<div class="question">3.<br>내 재생목록은</div>
-						<div class="answer" value="dk">최신 유행 그 자체다</div>
-						<div class="answer" value="ejl">숨듣명의 대명사다</div>
-						<div class="answer" value="afg">뮤지컬 넘버나 오페라, 클래식으로 가득하다</div>
-						<div class="answer" value="bchi">추억 저장소다</div>
-					</div>
-				</li>
-
-				<li id="q4">
-					<div class="content">
-						<div class="question">4.<br>놀이공원 폐장 직전! 딱 하나만 더 탈 수 있다면?</div>
-						<div class="answer" value="abhl">회전목마</div>
-						<div class="answer" value="dk">롤러코스터</div>
-						<div class="answer" value="cej">대관람차</div>
-						<div class="answer" value="fgi">기념품 가게로 직진</div>
-					</div>
-				</li>
-
-				<li id="q5">
-					<div class="content">
-						<div class="question">5.<br>나는 여행을 가기 전에</div>
-						<div class="answer" value="bcgjl">최악의 상황부터 가정하는 편이다</div>
-						<div class="answer" value="afhi">숙박, 교통편부터 알아보는 편이다</div>
-						<div class="answer" value="dek">무계획이 계획이다</div>
-					</div>
-				</li>
-
-				<li id="q6">
-					<div class="content">
-						<div class="question">6.<br>자고로 라면은</div>
-						<div class="answer" value="acdej">꼬들면이 제맛</div>
-						<div class="answer" value="bil">푹 끓인 면이 제맛</div>
-						<div class="answer" value="fghk">남이 끓여 준 게 짱</div>
 					</div>
 				</li>
 
